# OOP_LABS

./: CMakeLists.txt
consoleApp/: App.cc
include/Application/: Application.h
include/Character/: Character.h
src/: Application.cc  Character.cc
test/: Character_tests.cc
